--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,9 +1,12 @@
+body {
+    background-color: #F1BF98;
+}
+
 .page-header {
-    background-color: #C25100;
+    background-color: #6B818C;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
-
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
     font-size: 36pt;
@@ -11,7 +14,9 @@
 }
 
 .content {
-    margin-left: 40px;
+    margin-left: 10rem;
+    margin-bottom: 0;
+    float: left;
 }
 
 h1, h2, h3, h4 {
