--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -14,7 +14,7 @@ body {
 }
 
 .content {
-    margin-left: 10rem;
+    margin-left: 25px;
     margin-bottom: 0;
     float: left;
 }
@@ -54,4 +54,8 @@ h1, h2, h3, h4 {
 h1 a, h2 a {
     color: #FF8833;
     font-family: 'Lobster';
+}
+
+.comment {
+    margin: 20px 0px 20px 20px;
 }
